fix album title width overflow

--- a/src/app/album/components/album/album.component.scss
+++ b/src/app/album/components/album/album.component.scss
@@ -55,7 +55,7 @@
   }
 
   .album-container span {
-    max-width: 290px;
+    max-width: 220px;
   }
 
   .album-container img {
