--- a/src/app/track/components/track-list/track-list.component.scss
+++ b/src/app/track/components/track-list/track-list.component.scss
@@ -25,6 +25,7 @@
 
     h2 {
       margin: 0 0 6px;
+      padding-right: 6px;
     }
 
     .artist {
